# irsl_hardware_controller

./: README.md
apps/: memo.txt
common_utils/: CMakeLists.txt
common_utils/include/irsl/: display_base.h  display_util.h  simple_yaml_parser.hpp
realtime_utils/: CMakeLists.txt
realtime_utils/include/irsl/: realtime_task.h
shm_controller/: CMakeLists.txt
shm_controller/include/irsl/: irsl_shm_controller.h  shm_controller.h
shm_controller/src/: ShmDataHeader.cpp  ShmManager.cpp  ShmSettings.cpp  irsl_shm_data.hpp  open_shared_memory.cpp
shm_controller/test/: CMakeLists.txt  follower.cpp  leader.cpp  read_shm.cpp  read_shm_func.cpp  test.cpp  test.l
tests/: CMakeLists.txt  test_client.cpp  test_host.cpp
tests/shm_frame/: CMakeLists.txt  test_client.cpp  test_host.cpp
tests/yaml/: CMakeLists.txt  test.yaml  test_yaml.cpp
